CSS changes and display time in minutes:seconds

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,5 +4,6 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='jquery.min.js')
+    link(href='https://fonts.googleapis.com/css?family=Montserrat:400|PT+Sans', rel='stylesheet', type='text/css')
   body
     block content
