--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,14 +2,15 @@ html {
 background: #517fa4; /* fallback for old browsers */
 background: -webkit-linear-gradient(to left, #517fa4 , #243949); /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to left, #517fa4 , #243949); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  height: 100%;
 }
 
 body {
   margin: 0 auto;
   text-align: center;
-  font: 14px 'PT Sans', Helvetica, Arial, sans-serif;
+  font: 16px 'PT Sans', Helvetica, Arial, sans-serif;
   color:#FFFFFF;
+  height:100%;
 }
 
 a {
@@ -18,7 +19,7 @@ a {
 
 .title {
 	font: 40px 'MontSerrat', Helvetica, sans-serif;
-    margin-top:5px;
+    margin-top:20px;
 }
 
 #player {
@@ -31,4 +32,19 @@ h1 {
 
 .video-title{
     margin-top:-20px;
+}
+
+#mytimeline {
+	/*background: #efefef;*/
+	position: absolute;
+	bottom:0;
+	width: 100%;
+}
+#wrapper {
+	min-height: 100%;
+	position: relative;
+}
+.vis-item {
+	box-shadow: 0 8px 16px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
+
 }
